--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="/images/{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/cfp">Call for Papers</a>
+  	    <a href="{{ site.baseurl }}/pc">Commitee</a>
           </nav>
         </header>
       </div>
@@ -38,14 +39,25 @@
       {{ content }}
     </div>
 
+<!--
     <div class="wrapper-footer">
       <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
+	<div class="footer-img">
+		<img src="images/nus.jpeg"/>
+	</div>
+	<div class="footer-img">
+		<img src="images/sbip.png"/>
+	</div>
+	<div class="footer-img">
+		<img src="images/bytedance.png"/>
+	</div>
+	<div class="footer-img">
+		<img src="images/deakin.png"/>
+	</div>
+
       </div>
     </div>
-
+-->
     {% include analytics.html %}
   </body>
 </html>
