--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 800px;
   padding: 0 10px;
   width: 100%;
 }
@@ -163,10 +163,16 @@ img {
   }
 }
 
+.footer-img {
+  width: 180px;
+  height: 180px;
+  display: inline-block;
+}
+
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
+  width: 120px;
+  height: 120px;
   margin-right: 15px;
 
   @include mobile {
@@ -195,7 +201,6 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
-  font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
 }
@@ -203,7 +208,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-size: 16px;
+  font-size: 20px;
 
   @include mobile {
     margin: 3px 0;
@@ -214,8 +219,7 @@ nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
-  font-size: 18px;
-
+  font-size: 20px;
   @include mobile {
     float: none;
     margin-top: 9px;
@@ -227,7 +231,7 @@ nav {
     margin-left: 20px;
     color: $darkGray;
     text-align: right;
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: 1px;
 
     @include mobile {
@@ -275,7 +279,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  #background-color: $lightGray;
 }
 
 footer {
