--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/cfp">Call for Papers</a>
   	    <a href="{{ site.baseurl }}/pc">Commitee</a>
+	    <a href="{{ site.baseurl }}/program">Program</a>
           </nav>
         </header>
       </div>
